[package]
name = "polygone-server"
version = "0.1.0"
edition = "2021"
authors = ["Lévy <contact@soe-ai.dev>"]

[dependencies]
[dependencies]
polygone = { git = "https://github.com/lvs0/Polygone.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[profile.release]
opt-level = 3          # Maximize performance
codegen-units = 1      # Better optimizations
lto = "fat"            # Thin or Fat LTO for binary speed
panic = "abort"        # Keep for smaller binary overhead
strip = true           # Keep to remove symbols from binary
